# deppy

./: .gitignore  .travis.yml  Makefile  README.md  mypy.ini  pyproject.toml
deppy/: __init__.py  decorator.py  di.py  registry.py  scope.py  type.py  util.py
deppy/test/: greeter.py  test_container.py  test_injectable.py
